Fixes configuration page not displaying MySQL password field. Fixes styling on configuration page (colors, font size, ...). Textareas on the configuration page will now auto select all text on mouse click. News feed items on the admin overview page now properly loading items (correct styling, collapse/expand working). Edits show_version behaviour: if show_version is disabled the footer logos, images and device type are being hidden.

--- a/css/twinkle.css
+++ b/css/twinkle.css
@@ -1489,3 +1489,8 @@ footer .footer-label {
 color: #FF0000;
 font-weight: bold;
 }
+
+/* disable resize for config file textareas */
+textarea.filecontent, textarea.shell {
+  resize: none;
+}
